--- a/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.Rmd
+++ b/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "MERLIN_SNPKIT_matrices"
+title: "Generate SNP Distance Matrices"
 author: "Kyle Gontjes"
 date: "`r Sys.Date()`"
 output: html_document
@@ -14,7 +14,7 @@ opts_knit$set(root.dir='~/Desktop/gl_merlin/')
  
 # Environment
 
-```{r environment, echo=F, message=FALSE, include=F, results=F}
+```{r environment, echo=T, message=FALSE, include=T, results=T}
 #Packages
 packages <- c("tidyverse",'ape','kableExtra','phytools','igraph','ggraph','tableone','kableExtra') 
 
