--- a/scripts/SNP_cluster_detection/MERLIN_SNP_distance_pairs.Rmd
+++ b/scripts/SNP_cluster_detection/MERLIN_SNP_distance_pairs.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "MERLIN_SNP_Pair_DF"
+title: "Generate pairs for SNP distance analyses"
 author: "Kyle Gontjes"
 date: "`r Sys.Date()`"
 output: html_document
@@ -13,7 +13,7 @@ opts_knit$set(root.dir='~/Desktop/gl_merlin/')
 ```
 # Environment
 
-```{r environment, echo=F, message=FALSE, include=F, results=F}
+```{r environment, echo=T, message=FALSE, include=T, results=T}
 #Packages
 packages <- c("tidyverse",'ape','kableExtra','phytools','igraph','ggraph','tableone','kableExtra') 
 
@@ -26,6 +26,7 @@ Sys.info()
 sessionInfo()
 ```
 
+# Load data
 ```{r} 
 df <- readRDS("./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd.RDS") %>% subset(WGS_escre==T & qc_pass==T)
 ``` 
@@ -100,8 +101,6 @@ update_pair_types_w_info <- function(pair_types_df,df,voi){
 } 
 ```
 
-
- 
 ```{r}
 voi = c("household","Species","Species_ST","specimen",'visit','specimen_category','individual_id')
 
