--- a/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.Rmd
+++ b/scripts/SNP_cluster_detection/MERLIN_SNPKIT_matrices.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Generate SNP Distance Matrices"
+title: "SNP Clustering Step 1: Generate SNP Distance Matrices"
 author: "Kyle Gontjes"
 date: "`r Sys.Date()`"
 output: html_document
@@ -28,7 +28,9 @@ sessionInfo()
 ```
 
 ```{r} 
-df <- readRDS("./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/MERLIN_cohort_metadata_final.RDS") %>% subset(WGS_escre==T & qc_pass==T)
+df <- readRDS("./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/dataset/metadata_w_genomic_id_w_duplicate_ESCrE_addressed_w_qcd_w_sra_metadata.RDS") %>% subset(WGS_escre==T & qc_pass==T)
+
+paste0("Number of considered isolates: ",nrow(df))
 ``` 
 
 ```{r}
@@ -41,7 +43,8 @@ species <- table(df$Species) %>% subset(.>1) %>% names %>% str_split(" ",simplif
   paste0(genus,species)
 })  
 
-dist_matrix <- pbmcapply::pbmclapply(species,FUN=function(x){ 
+dist_matrix <- pbmcapply::pbmclapply(species,FUN=function(x){  
+  # Load file
   if(x %in% c('cportucalensis','sliquefaciens')){
     name <- paste0(x,'_var_sites.fa')
     path <- paste0("./",x,"/snpkit_rfmt_results/phylo_analysis/IQtree/",name)
@@ -57,7 +60,9 @@ dist_matrix <- pbmcapply::pbmclapply(species,FUN=function(x){
 ) %>%  as.data.frame 
   if(x == "ecoli"){
     dna_matrix <- dna_matrix %>% select(-'NZ_UFZF01000006.1') %>% subset(rownames(.) != 'NZ_UFZF01000006.1')
-  } 
+  }   
+  # Remove unnecessary
+  dna_matrix <- dna_matrix %>% subset(rownames(.) %in% df$genomic_id) %>% select(any_of(df$genomic_id))
   return(dna_matrix)
 },mc.cores=6) %>% `names<-`(species)
 ```
@@ -66,4 +71,3 @@ dist_matrix <- pbmcapply::pbmclapply(species,FUN=function(x){
 setwd('~/Desktop/gl_merlin/')
 saveRDS(dist_matrix,'./Analysis/Household_transmission/MERLIN-prolonged-colonization-ms/data/SNP_distance/MERLIN_SNP_distance_matrices.RDS')
 ```
-
